@@ -2,5 +2,7 @@ Sector/Cluster,Subsector,Organización,Sex,Targeted,País,Departamento/Provincia
 #sector,#subsector,#org,#population+sex,#targeted,#country,#adm1
 WASH,Higiene,ACNUR,Hombres,100,Panamá,Los Santos
 WASH,Higiene,ACNUR,Mujeres,100,Panamá,Los Santos
+Salud,Vacunación,OMS,Hombres,,Colombia,Cauca
+Salud,Vacunación,OMS,Mujeres,,Colombia,Cauca
 WASH,Urbano,OMS,Hombres,80,Venezuela,Amazonas
 WASH,Urbano,OMS,Mujeres,95,Venezuela,Amazonas
