@@ -30,6 +30,7 @@ class AbstractBaseFilterTest(unittest.TestCase):
 
     def setUp(self):
         # use a cache filter so that we can run tests multiple times
+        super().setUp()
         self.source = hxl.data(DATA).cache()
 
 
@@ -283,7 +284,7 @@ class TestAppendFilter(AbstractBaseFilterTest):
     ]
 
     def setUp(self):
-        super(TestAppendFilter, self).setUp()
+        super().setUp()
         self.append_source = hxl.data(TestAppendFilter.APPEND_DATA)
     
     def test_headers(self):
@@ -626,6 +627,7 @@ class TestDeduplicationFilter (AbstractBaseFilterTest):
 
     def setUp(self):
         # use a cache filter so that we can run tests multiple times
+        super().setUp()
         self.source = hxl.data(self.DATA_IN)
 
     def test_dedup(self):
@@ -677,7 +679,7 @@ class TestMergeDataFilter(AbstractBaseFilterTest):
     ]
 
     def setUp(self):
-        super(TestMergeDataFilter, self).setUp()
+        super().setUp()
         self.merged = self.source.merge_data(hxl.data(self.MERGE_IN), '#adm1-code', '#adm1+code')
 
     def test_headers(self):
@@ -865,22 +867,41 @@ class TestRowCountFilter(AbstractBaseFilterTest):
         self.assertEqual(2, counter.row_count)
 
         
-class TestRowFilter(AbstractBaseFilterTest):
+class TestRowFilter(unittest.TestCase):
 
+    DATA = [
+        ['Organisation', 'Cluster', 'District', 'Affected', 'Activity'],
+        ['#org', '#sector+list', '#adm1', '#affected', '#activity'],
+        ['NGO A', 'WASH', 'Coast', '200', 'Activity 1'],
+        ['NGO B', 'Education', 'Plains', '100', 'Activity 2'],
+        ['NGO B', 'Education', 'Coast', '300', ''],
+        ['NGO A', 'Education, Protection', 'Plains', '150', 'Activity 3']
+    ]
+
+    def setUp(self):
+        self.source = hxl.data(self.DATA).cache()
+    
     def test_with_rows(self):
-        self.assertEqual(DATA[3:5], self.source.with_rows(['#sector=education']).values)
-        self.assertEqual(DATA[3:5], self.source.with_rows('#sector=education').values)
+        self.assertEqual(self.DATA[3:5], self.source.with_rows(['#sector=education']).values)
+        self.assertEqual(self.DATA[3:5], self.source.with_rows('#sector=education').values)
 
     def test_without_rows(self):
-        self.assertEqual(DATA[3:], self.source.without_rows(['#sector=wash']).values)
-        self.assertEqual(DATA[3:], self.source.without_rows('#sector=wash').values)
+        self.assertEqual(self.DATA[3:6], self.source.without_rows(['#sector=wash']).values)
+        self.assertEqual(self.DATA[3:6], self.source.without_rows('#sector=wash').values)
+
+    def test_regex(self):
+        self.assertEqual(self.DATA[3:6], self.source.with_rows('#sector~duca').values)
+        self.assertEqual(self.DATA[2:3], self.source.with_rows('#sector!~duca').values)
+
+    def test_empty(self):
+        self.assertEqual(self.DATA[4:5], self.source.with_rows('#activity is empty').values)
 
     def test_aggregates(self):
-        self.assertEqual([DATA[4]], self.source.with_rows('#affected is max').values)
-        self.assertEqual([DATA[3]], self.source.with_rows('#affected is min').values)
+        self.assertEqual(self.DATA[4:5], self.source.with_rows('#affected is max').values)
+        self.assertEqual(self.DATA[3:4], self.source.with_rows('#affected is min').values)
 
     def test_masked(self):
-        self.assertEqual(DATA[2:], self.source.with_rows('sector=education', mask='org=ngo b').values)
+        self.assertEqual(self.DATA[2:6], self.source.with_rows('sector=education', mask='org=ngo b').values)
 
 
 class TestSortFilter(AbstractBaseFilterTest):
